# figurelabs

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
.omx/state/: update-check.json
docs/chat/: CHAT_TYPES_ANALYSIS.md
docs/export/: DOWNLOAD_API.md
docs/mail/duckmail/: link.txt  llm-api-docs.txt
docs/mail/mailtm/: accounts.md  authentication.md  domains.md  error-handling.md  messages.md  webhooks.md
docs/register/: registration_analysis.md  registration_flow_complete.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.module.css  index.css  store.js
frontend/src/components/: AccountsPage.jsx  AccountsPage.module.css  DashboardPage.jsx  DashboardPage.module.css  GeneratePage.jsx  GeneratePage.module.css  LogsPage.jsx  LogsPage.module.css  MessageBubble.jsx  MessageBubble.module.css  MonitorPage.jsx  MonitorPage.module.css  SettingsPage.jsx  SettingsPage.module.css
scripts/: analyze_chat_types.py  analyze_message_format.py  cchp_pipeline.py  extract_message_samples.py  find_registration.py  generate_and_export.py  har_analyzer.py  probe_export.py  test_export_har.py  verify_e2e.py
src/: __init__.py  config.py  db.py
src/api/: app.py  factory.py
src/api/routers/: __init__.py  accounts.py  chat.py  stats.py
src/api/schemas/: __init__.py  accounts.py  chat.py  stats.py
src/chat/: __init__.py  __main__.py  client.py
src/core/: database.py  storage.py
src/export/: __init__.py  __main__.py  _session.py  client.py  formats.py
src/register/: __init__.py  __main__.py  client.py  mail_service.py
test/chat/: __init__.py  test_advanced_features.py  test_full_chat.py  test_openai_api.py  test_quick_chat.py
test/register/: __init__.py  test_mailtm.py  test_token.py
