[project]
name = "figurelabs-ai"
version = "0.1.0"
description = "FigureLabs.ai API client and automation tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.111",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.9",
    "python-pptx>=1.0.2",
    "requests>=2.31.0",
    "uvicorn[standard]>=0.29",
]
authors = [
    {name = "FigureLabs Team"}
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "httpx2>=2.5.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = []

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
